# VNTRemote

./: .gitignore  README.md
.github/workflows/: build.yml
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx
scripts/: build-macos.sh  build-windows.bat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  device_discovery.rs  file_transfer.rs  lib.rs  main.rs  service.rs  updater.rs  vnt_manager.rs
